# pycli-template

./: .env  main.py  pyproject.toml
src/: constants.py
src/tests/: new-test.py
