[tool.poetry]
name = "tmp"
version = "0.1.0"
description = ""
authors = ["aashishsingla567 <aashishsingla567@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
